cerrando endpoints del backend
